--- a/index.html
+++ b/index.html
@@ -62,9 +62,30 @@
     <option value="Southland">Southland</option>
     </select><br>
     
-    Trade Interest:<select  id="00N1m000000ctLu" multiple="multiple" name="00N1m000000ctLu" title="Trade Interest"><option value="Carpentry">Carpentry</option>
+    Industry:<select  id="00N1m000000ctLr" name="00N1m000000ctLr" title="Industry"><option value="">--None--</option><option value="None">None</option>
+    <option value="Aluminium Joinery">Aluminium Joinery</option>
+    <option value="Brick and Blocklaying">Brick and Blocklaying</option>
+    <option value="Carpentry">Carpentry</option>
+    <option value="Cement and Concrete">Cement and Concrete</option>
+    <option value="Competitive Manufacturing">Competitive Manufacturing</option>
+    <option value="Construction Management">Construction Management</option>
+    <option value="Floor and Wall Tiling">Floor and Wall Tiling</option>
     <option value="Flooring">Flooring</option>
-    <option value="Painting">Painting</option>
+    <option value="Foundations">Foundations</option>
+    <option value="Frame and Truss Manufacture">Frame and Truss Manufacture</option>
+    <option value="Glass and Glazing">Glass and Glazing</option>
+    <option value="Health, Safety and Injury Prevention">Health, Safety and Injury Prevention</option>
+    <option value="Interior Systems">Interior Systems</option>
+    <option value="Kitchen and Bathroom Design">Kitchen and Bathroom Design</option>
+    <option value="Masonry">Masonry</option>
+    <option value="Painting and Decorating">Painting and Decorating</option>
+    <option value="Proprietary Plaster Cladding Systems">Proprietary Plaster Cladding Systems</option>
+    <option value="Refractory Installation">Refractory Installation</option>
+    <option value="Scaffolding and Rigging">Scaffolding and Rigging</option>
+    <option value="Solid Plastering">Solid Plastering</option>
+    <option value="Stonemasonry">Stonemasonry</option>
+    <option value="Timber Joinery">Timber Joinery</option>
+    <option value="Other">Other</option>
     </select><br>
     
     Work Experience:<select  id="00N1m000000ctLv" name="00N1m000000ctLv" title="Work Experience"><option value="">--None--</option><option value="No experience">No experience</option>
