--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <h1 style="font-family:Arial Black; color:#424749">Starter Job Matching</h1>
     <p>Please fill in this form to Register interest in finding a Job.</p>
     <hr>
-
+    <body>
     <label for="first_name">First Name</label>
     <input  id="first_name" maxlength="40" name="first_name" size="20" type="text" />
     <br>
@@ -127,7 +127,7 @@
           
           Own Transport:<input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1" />
           <br>
-          
+          </body>
           <input type="submit" name="submit">
 
 
