--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
   <div class="container">
-    <h1 style="font-family:Arial Black; color:#424749">Starter Job Matching</h1>
+    <h1 style="font-family:Arial Black; color:royalblue">Starter Job <h1 style="font-family:Arial Black; color:peru"></h1>Matching</h1>
     <p>Please fill in this form to Register interest in finding a Job.</p>
     <hr>
     <body>
