--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
   <div class="container">
-    <h1 style="font-family:Arial Black; color:royalblue; float:left">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:right">Matching</h1>
+    <h1 style="font-family:Arial Black; color:royalblue; float:left">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left">Matching</h1>
+    <hr />
     <p>Please fill in this form to Register interest in finding a Job.</p>
     <hr>
     <body>
