--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
   <div class="container">
+    <style>
+      body {
+        background: #555;
+      }
+      
+      .content {
+        max-width: 500px;
+        margin: auto;
+        background: white;
+        padding: 10px;
+      }
+      </style>
     <h1 style="font-family:Arial Black; color:royalblue; float:left">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left">Matching</h1>
     <hr />
     <p>Please fill in this form to Register interest in finding a Job.</p>
