--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         padding: 10px;
       }
       </style>
-    <h1 style="font-family:Arial Black; color:royalblue; float:left">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left">Matching</h1>
+    <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left">Matching</h1>
     <hr />
     <p>Please fill in this form to Register interest in finding a Job.</p>
     <hr>
