--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <div class="container">
     <style>
       body {
-        background: #555;
+        background:lightgrey;
       }
       
       .content {
@@ -12,7 +12,9 @@
         padding: 10px;
       }
       </style>
+    <div style="clear: both">
     <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left">Matching</h1>
+    </div>
     <hr />
     <p>Please fill in this form to Register interest in finding a Job.</p>
     <hr>
