--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>Please fill in this form to Register interest in finding a Job.</p>
     <hr>
     <body>
+    <div class="content">
     <label for="first_name">First Name</label>
     <input  id="first_name" maxlength="40" name="first_name" size="20" type="text" />
     <br>
@@ -142,6 +143,7 @@
           
           Own Transport:<input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1" />
           <br>
+    </div>
           </body>
           <input type="submit" name="submit">
 
