--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       }
       </style>
     <div style="clear: both">
-    <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left">Matching</h1>
+    <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left"> Matching</h1>
     </div>
     <br>
-    
+
     <hr />
-    <p>Please fill in this form to Register interest in finding a Job.</p>
+    <h2>Please fill in this form to Register interest in finding a Job.</h2>
     <hr>
     <body>
     <div class="content">
@@ -152,6 +152,6 @@
 
     <hr>
 
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+    <p>By creating an account you agree to our <a href="https://bcito.org.nz/terms-and-conditions/">Terms & Privacy</a>.</p>
   </div>
 </form>
