--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         padding: 10px;
       }
       </style>
+    <div class="content">
     <div style="clear: both">
     <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left"> Matching</h1>
     </div>
@@ -20,6 +21,7 @@
     <hr />
     <h2>Please fill in this form to Register interest in finding a Job.</h2>
     <hr>
+    </div>
     <body>
     <div class="content">
     <label for="first_name">First Name</label>
@@ -147,8 +149,10 @@
           <br>
     </div>
           </body>
-          <input type="submit" name="submit">
 
+          <div class="content">
+                    <input type="submit" name="submit">
+          </div>
 
     <hr>
 
