--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left"> Matching</h1>
     </div>
     <br>
-
+<div>
     <hr />
-    <h2>Please fill in this form to Register interest in finding a Job.</h2>
+    <p>Please fill in this form to Register interest in finding a Job.</p>
     <hr>
+</div>
     </div>
     <body>
     <div class="content">
@@ -152,10 +153,11 @@
 
           <div class="content">
                     <input type="submit" name="submit">
-          </div>
+          
 
     <hr>
 
     <p>By creating an account you agree to our <a href="https://bcito.org.nz/terms-and-conditions/">Terms & Privacy</a>.</p>
+          </div>
   </div>
 </form>
