--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </style>
     <div class="content">
     <div style="clear: both">
-    <h1 style="font-family:proxima-nova, sans-serif; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left"> &nbsp;Matching</h1>
+    <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left"> &nbsp;Matching</h1>
     </div>
     <br>
 
