--- a/index.html
+++ b/index.html
@@ -11,10 +11,20 @@
         background: white;
         padding: 10px;
       }
+      h1{font-family:Arial Black;
+        color:royalblue;
+       }
+
+       span {
+        font-family:Arial Black;
+         color:peru;
+       }
       </style>
     <div class="content">
     <div style="clear: both">
-    <h1 style="font-family:Arial Black; color:royalblue; float:left;">Starter Job </h1><h1 style="font-family:Arial Black; color:peru; float:left"> &nbsp;Matching</h1>
+
+
+    <h1>Starter Job <span> &nbsp;Matching</span></h1>
     </div>
     <br>
 
