--- a/index.html
+++ b/index.html
@@ -19,22 +19,29 @@
         font-family:Arial Black;
          color:peru;
        }
+
+       p {
+        font-family:Arial Black;
+        color:black;
+       }
+
+      
       </style>
     <div class="content">
     <div style="clear: both">
 
 
-    <h1>Starter Job <span> &nbsp;Matching</span></h1>
+    <h1>Starter Job <span>Matching</span></h1>
     </div>
     <br>
-
+    <div>
+      <p> Please fill in this form to Register interest in finding a Job.</p>
+      <hr>
+  </div>
     </div>
     <body>
     <div class="content">
-      <div>
-        <p>Please fill in this form to Register interest in finding a Job.</p>
-        <hr>
-    </div>
+
     <label for="first_name">First Name</label>
     <input  id="first_name" maxlength="40" name="first_name" size="20" type="text" />
     <br>
