--- a/index.html
+++ b/index.html
@@ -25,17 +25,24 @@
         color:black;
        }
 
+       label {
+        text-align: center
+       }
+
+       input {
+        margin: auto
+       }
       
       </style>
     <div class="content">
     <div style="clear: both">
 
 
-    <h1>Starter Job <span>Matching</span></h1>
+    <h1><center>Starter Job <span>Matching</span></center></h1>
     </div>
-    <br>
+   
     <div>
-      <p> Please fill in this form to Register interest in finding a Job.</p>
+      <p> <center>Please fill in this form to Register interest in finding a Job.</center></p>
       <hr>
   </div>
     </div>
