--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <body>
     <div class="content">
 
-    <label for="first_name">First Name</label>
-    <input  id="first_name" maxlength="40" name="first_name" size="20" type="text" />
+    <label style=label for="first_name">First Name</label>
+    <input style=input id="first_name" maxlength="40" name="first_name" size="20" type="text" />
     <br>
 
     <label for="last_name">Last Name</label>
