--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </div>
     </div>
     <body>
-    <div class="content">
+    <div class="content" style="label">
 
     <label style=label for="first_name">First Name</label>
     <input style=input id="first_name" maxlength="40" name="first_name" size="20" type="text" />
