--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     <body>
     <div class="content" style="label">
 
-    <label style=label for="first_name">First Name</label>
-    <input style=input id="first_name" maxlength="40" name="first_name" size="20" type="text" />
+    <label for="first_name"><center>First Name</center></label>
+    <br>
+    <input id="first_name" maxlength="40" name="first_name" size="20" type="text" />
+    <br>
     <br>
 
     <label for="last_name">Last Name</label>
