--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
        }
 
        label {
-        text-align: center
+        align-items: center;
+        font-family:Arial;
+        color:black
        }
 
        input {
-        margin: auto
+        align-items: center;
        }
       
       </style>
@@ -50,7 +52,7 @@
     <body>
     <div class="content" style="label">
 
-    <label for="first_name"><center>First Name</center></label>
+    <label for="first_name">First Name</label>
     <br>
     <input id="first_name" maxlength="40" name="first_name" size="20" type="text" />
     <br>
