--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
   </div>
     </div>
     <body>
+      <center>
     <div class="content" style="label">
 
     <label for="first_name">First Name</label>
@@ -74,7 +75,8 @@
     <input  id="mobile" maxlength="40" name="mobile" size="20" type="text" />
     <br>
 
-    Region:<select  id="00N1m000000ctLt" name="00N1m000000ctLt" title="Region">
+    
+      Region:<select  id="00N1m000000ctLt" name="00N1m000000ctLt" title="Region">
       <option value="">--None--</option>
       <option value="Northland">Northland</option>
       <option value="North Auckland">North Auckland</option>
@@ -104,6 +106,7 @@
       <option value="Central Otago">Central Otago</option>
       <option value="Southland">Southland</option>
       </select>
+    
       <br>
 
       Work Experience:<select id="00N1m000000ctLv" name="00N1m000000ctLv" title="Work Experience">
@@ -178,6 +181,7 @@
           Own Transport:<input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1" />
           <br>
     </div>
+      </center>
           </body>
 
           <div class="content">
