--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
         margin-bottom:0.5em;
         position:relative;
        }
+       option {
+        align-items: center;
+        width:100%;
+        margin-bottom:0.5em;
+        position:relative;
+       }
       
       </style>
     <div class="content">
