--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
           <br>
           <br>
 
-          <p>Own Transport:</p>
-                    <input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1" />
+          <p>Own Transport:
+                    <input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1" /></p>
           <br>
           <br>
 
-          <p>Completed Gateway Student:</p>
-                  <input  id="00N1m000000ctLn" name="00N1m000000ctLn" type="checkbox" value="1" />
-          <br>
+          <p>Completed Gateway Student:
+                  <input  id="00N1m000000ctLn" name="00N1m000000ctLn" type="checkbox" value="1" /></p>
+                          <br>
           <br>
           
           <p>Completed a Pre-Trade Course:</p>
