--- a/index.html
+++ b/index.html
@@ -35,13 +35,21 @@
 
        input {
         align-items: center;
-        width:100%;
+        width:70%;
         margin-bottom:0.5em;
         position:relative;
        }
+
+       select {
+        align-items: center;
+        width:70%;
+        margin-bottom:0.5em;
+        position:relative;
+       }
+       
        option {
         align-items: center;
-        width:100%;
+        width:70%;
         margin-bottom:0.5em;
         position:relative;
        }
