--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 
       
       body {
-        background:lightgrey;
+        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        line-height: 1.42857143;
+        color: #333;
+        background-color: #fff;
+        margin: 0;
       }
       
       .content {
