--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         line-height: 1.42857143;
         border: black;
                 color: #333;
-        background-color:lightgray;
+        background-color:white;
         margin: 1;
       }
       
@@ -100,7 +100,7 @@
 
     <label for="mobile">Mobile</label>
     <br>
-    <input  id="mobile" maxlength="40" name="mobile" size="70" type="text" />
+    <input  id="mobile" maxlength="40" name="mobile" size="65" type="text" />
     <br>
     
         <p>Region:</p>
