--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
         line-height: 1.42857143;
         border: black;
                 color: #333;
-        background-color:white;
+        background-color:lightgray;
         margin: 1;
       }
       
       .content {
         max-width: 700px;
         margin: auto;
-        background:lightgrey;
+        background:white;
         padding: 10px;
       }
       h1{font-family:Arial Black;
