--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         position:relative;
        }
 
-       
+       input[type=text] {
+        border: none;
+        border-bottom: 2px solid lightgray;
+      }       
       
       </style>
     <div class="content">
