--- a/index.html
+++ b/index.html
@@ -201,8 +201,9 @@
           <option value="Full">Full</option>
           </select>
           <br>
-          
-          <left>container">Own Transport
+        </center>
+
+          <left>Own Transport
             <input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1" >
             <span class="checkmark"></span>
           </label></left>
@@ -230,7 +231,7 @@
 </right>
 
     </div>
-      </center>
+     
           </body>
 
           <center>
