--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
         width:70%;
         margin-bottom:0.5em;
         position:relative;
+        border: none;
+        border-bottom: 2px solid lightgray;
        }
        
        option {
@@ -51,6 +53,8 @@
         width:70%;
         margin-bottom:0.5em;
         position:relative;
+        border: none;
+        border-bottom: 2px solid lightgray;
        }
 
        input[type=text] {
@@ -203,7 +207,7 @@
           <br>
         </center>
 
-          <left>Own Transport
+        <label class="container">Own Transport
             <input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1" >
             <span class="checkmark"></span>
           </label></left>
