--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        }
 
        label {
-        align-items: center;
+        align-items: left;
         font-family:Arial;
         color:black
        }
