--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
        }
 
        input[type=text] {
+        align-items: center;
         border: none;
         border-bottom: 2px solid lightgray;
       }       
@@ -77,7 +78,7 @@
   </div>
     </div>
     <body>
-      <center>
+      
     <div class="content" style="label">
 
     <label for="first_name">First Name</label>
@@ -235,7 +236,7 @@
           <br>
           <br>
 
-</center>
+
 
     </div>
      
