--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
        }
 
        input[type=text] {
-        align-items: center;
         border: none;
         border-bottom: 2px solid lightgray;
       }       
@@ -78,7 +77,7 @@
   </div>
     </div>
     <body>
-      
+      <center>
     <div class="content" style="label">
 
     <label for="first_name">First Name</label>
@@ -236,7 +235,7 @@
           <br>
           <br>
 
-
+</center>
 
     </div>
      
