--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
        label {
         align-items: left;
+        padding-left: 50px;
         font-family:Arial;
         color:black
        }
