--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
        p {
         font-family:Arial;
         color:black;
+        align-items: left;
        }
 
        label {
@@ -59,6 +60,7 @@
        }
 
        input[type=text] {
+        align-items: center;
         border: none;
         border-bottom: 2px solid lightgray;
       }       
@@ -78,7 +80,7 @@
   </div>
     </div>
     <body>
-      <center>
+      
     <div class="content" style="label">
 
     <label for="first_name">First Name</label>
@@ -236,7 +238,7 @@
           <br>
           <br>
 
-</center>
+
 
     </div>
      
