--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
     <div class="content">
     <div style="clear: both">
 
-      <img src="https://s3.amazonaws.com/CreateForm/userimg_1567047185.png" class="img-responsive" >
+      <Center><img src="https://s3.amazonaws.com/CreateForm/userimg_1567047185.png" class="img-responsive" width=500px></Center>
+
     <h1><center>Starter Job <span>Matching</span></center></h1>
     </div>
    
@@ -153,7 +154,7 @@
       <br>
     
       <p>Work Experience:</p>
-      
+
       <center><select id="00N1m000000ctLv" name="00N1m000000ctLv" title="Work Experience"></center>
         <option value="">--None--</option>
         <option value="No experience">No experience</option>
