--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
        }
 
        p {
-        align-items: left;
-        padding-left: 110px;
         font-family:Arial;
         color:black;
         
@@ -247,7 +245,7 @@
                       <div class="content">
                     <input type="submit" name="submit">
 
-                    <p>By creating an account you agree to our <a href="https://bcito.org.nz/terms-and-conditions/">Terms & Privacy</a>.</p>
+                    <p padding-right=110px;>By creating an account you agree to our <a href="https://bcito.org.nz/terms-and-conditions/">Terms & Privacy</a>.</p>
                   </div>
           </div>
           </center>
