--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
   <div class="container">
     <style>
-
+      @font-face {
+        font-family: 'Montserrat';
+        font-style: normal;
+        font-weight: 400;
+        src: local('Montserrat Regular'), local('Montserrat-Regular'), url(https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');
+        unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+      }
       
       body {
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: "Montserrat";
         font-size: 14px;
         line-height: 1.42857143;
         border: black;
@@ -19,12 +25,12 @@
         background:white;
         padding: 10px;
       }
-      h1{font-family:Arial Black;
+      h1{font-family:Montserrat;
         color:royalblue;
        }
 
        span {
-        font-family:Arial Black;
+        font-family:Montserrat;
          color:peru;
        }
 
