--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         margin-bottom:0.5em;
         position:relative;
         border: none;
+        height:20px 
         border-bottom: 2px solid lightgray;
        }
        
@@ -65,6 +66,7 @@
         margin-bottom:0.5em;
         position:relative;
         border: none;
+        height:20px 
         border-bottom: 2px solid lightgray;
        }
 
@@ -73,7 +75,8 @@
         position:relative;
         border: none;
         border-bottom: 2px solid lightgray;
-      }       
+        height:20px ;
+            }       
       
       </style>
     <div class="content">
