--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
         
 </div>
 <div>
+  <Center>
         <label class="container" >Own Transport
             <input  id="00N1m000000ctLs" name="00N1m000000ctLs" type="checkbox" value="1">
             <span class="checkmark"></span>
@@ -252,6 +253,7 @@
           </right>
           <br>
           <br>
+          </Center>
 </div>
 
 
