--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <span class="checkmark"></span>
           </label>
 
-          <right padding-right=110px;>
+          <right>
           <label class="container">Completed Gateway Student
             <input   id="00N1m000000ctLn" name="00N1m000000ctLn" type="checkbox" value="1">
             <span class="checkmark"></span>
