--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <br>
     
                    
-        <left><p align-items=left; padding-left=110px;>Drivers Licence:</p></left>
+        <p align-items=left; padding-left=110px;>Drivers Licence:</p>
 
           <center><select  id="00N1m000000ctLq" name="00N1m000000ctLq" title="Drivers Licence">
             <option value="None">None</option>
