--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
+<head>
+<META HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+</head>
+
+
 <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
+
+  <input type=hidden name="oid" value="00D1m0000008lRs">
+  <input type=hidden name="retURL" value="http://bcito.org.nz">
 
 
 
