--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
   </div>
     </div>
     <body>
-      
+    <input  id="company" maxlength="40" name="company" size="20" type="hidden" value="Job Seeker" />
+    <br>
     <div class="content" style="label">
 
     <label for="first_name">First Name</label>
