--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
   </div>
     </div>
     <body>
-    <input  id="company" maxlength="40" name="company" size="20" type="hidden" value="Job Seeker" />
+
+    <input id="company" maxlength="40" name="company" size="20" type="hidden" defaultvalue="Job Seeker" />
     <br>
     <div class="content" style="label">
 
