--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           </left>
 
           <input type=hidden name="recordType" id="recordType" value="0125D000000MwqeQAC">
-          <input  typle=hidden id="company" maxlength="40" name="company" size="20" value="Starter" /><br>
+          <input  type=hidden id="company" maxlength="40" name="company" size="20" value="Starter" /><br>
 
 
 </div>
