--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <form action="https://test.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST">
 
-  <input type=hidden name="oid" value="00D1m0000008lRs">
+  <input type=hidden name="oid" value="00D5D000000DHXI">
   <input type=hidden name="retURL" value="http://bcito.org.nz">
 
 
