--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
   
          p {
           align-items: left;
-          padding-left: 110px;
           font-family:Arial;
           color:black;
           
@@ -298,7 +297,7 @@
                         <div class="content">
                       <input type="submit" name="submit">
   
-                      <p padding-right=180px;>By creating an account you agree to our <a href="https://bcito.org.nz/terms-and-conditions/">Terms & Privacy</a>.</p>
+                      <p>By creating an account you agree to our <a href="https://bcito.org.nz/terms-and-conditions/">Terms & Privacy</a>.</p>
                     </div>
             </div>
             </center>
