--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       
         <br>
         <br>
-        <h2>Prefrences for Apprentice Candidates</h2>
+        <center><h2>Prefrences for Apprentice Candidates</h2></center>
         <hr>
         <br>
         <br>
