--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <center><input  id="mobile" maxlength="40" name="mobile" size="65" type="text" /></center>
       
       <div>
-          <p class="ex1";>Region:</p>
+          <p class="ex1">Region:</p>
           <center><select  id="00N5D000002ULxw" name="00N5D000002ULxw" title="Region">
         <option value="">--None--</option>
         <option value="Northland">Northland</option>
@@ -194,7 +194,7 @@
   <br>
   <br>
   
-        <left><p class=ex1;>Work Experience:</p></left>
+        <left><p class="ex1">Work Experience:</p></left>
   
         <center><select id="00N5D000002ULxI" name="00N5D000002ULxI" title="Work Experience">
           <option value="">--None--</option>
