--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
         <br>
       <div class="content" style="label">
   
-        <input type=hidden name="recordType" id="recordType" value="0125D000000MwqjQAC">
+        <input type="hidden" name="recordType" id="recordType" value="0125D000000MwqjQAC">
+
           <label for="company">Company Name</label>
           <br>
           <center>
