--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
         <br>
       <div class="content" style="label">
   
-        <input type="hidden" name="recordType" id="recordType" value="0125D000000MwqjQAC">
+        
 
           <label for="company">Company Name</label>
           <br>
           <center>
           <input id="company" maxlength="40" name="company" size="65" type="text" /></center>
           <br>
-          
+          <input type="hidden" name="recordType" id="recordType" value="0125D000000MwqjQAC"/>
   
   
       <label for="first_name">Employer First Name</label>
