--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <center>
           <input id="company" maxlength="40" name="company" size="65" type="text" /></center>
           <br>
-          <input id="recordType" type="hidden" name="recordType" value="0125D000000MwqjQAC"/>
+          <input id="recordType" type="hidden" name="recordType" value="0125D000000Mwqj"/>
   
   
       <label for="first_name">Employer First Name</label>
